Template DiffusionDistance on the point type. Add a generic vector type conversion function. Implement DiffusionDistance on patches in a local supporting neighborhood - compiles but not tested.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ INCLUDE(${ITK_USE_FILE})
 add_library(PatchComparison Helpers.cpp Mask.cpp)
 
 ADD_EXECUTABLE(InteractivePatchComparison
+DiffusionDistance.cpp 
 InteractivePatchComparisonWidget.cxx
 Interactive.cpp 
 SwitchBetweenStyle.cxx
