Use PatchComparison submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "EigenHelpers"]
 	path = EigenHelpers
 	url = git@github.com:daviddoria/EigenHelpers.git
+[submodule "PatchComparison"]
+	path = PatchComparison
+	url = git@github.com:daviddoria/PatchComparison.git
