Import top patches functionality.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,10 +25,13 @@ FIND_PACKAGE(Qt4 REQUIRED)
 INCLUDE(${QT_USE_FILE})
 
 QT4_WRAP_UI(InteractivePatchComparisonWidgetUISrcs
-InteractivePatchComparisonWidget.ui PatchInfoWidget.ui)
+InteractivePatchComparisonWidget.ui
+PatchInfoWidget.ui
+TopPatchesWidget.ui)
 QT4_WRAP_CPP(InteractivePatchComparisonWidgetMOCSrcs
 InteractivePatchComparisonWidget.h
-PatchInfoWidget.h)
+PatchInfoWidget.h
+TopPatchesWidget.h)
 
 FIND_PACKAGE(VTK REQUIRED)
 INCLUDE(${VTK_USE_FILE})
@@ -37,12 +40,13 @@ FIND_PACKAGE(ITK REQUIRED)
 INCLUDE(${ITK_USE_FILE})
 
 ADD_EXECUTABLE(InteractivePatchComparison
-InteractivePatchComparisonWidget.cxx
+InteractivePatchComparisonWidget.cpp
 Interactive.cpp 
 SwitchBetweenStyle.cxx
 CustomImageStyle.cxx
 CustomTrackballStyle.cxx
-PatchInfoWidget.cxx
+PatchInfoWidget.cpp
+TopPatchesWidget.cpp
 ${InteractivePatchComparisonWidgetUISrcs} ${InteractivePatchComparisonWidgetMOCSrcs})
 TARGET_LINK_LIBRARIES(InteractivePatchComparison PatchComparison Mask
 EigenHelpers QtHelpers Helpers VTKHelpers ITKHelpers ITKVTKHelpers
